--- a/web/WEB-INF/index.html
+++ b/web/WEB-INF/index.html
@@ -83,6 +83,7 @@
         </div>
         <button type="button" id="register-btn" class="btn btn-default">注册</button>
     </form>
+    <iframe src="//player.bilibili.com/player.html?aid=22500134&cid=37296070&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="height: 700px;width: 100%"> </iframe>
 </div>
 </body>
 </html>
