--- a/web/WEB-INF/index.html
+++ b/web/WEB-INF/index.html
@@ -1,89 +1,60 @@
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8">
-    <title>红太阳管理系统</title>
-    <link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script>
-        $(function () {
-            $("#login-btn").click(function () {
-                $.ajax({
-                    type: "POST",
-                    dataType: "text",
-                    url: "/api/user/login",
-                    data: {
-                        username: $("#login-username").val(),
-                        password: $("#login-password").val()
-                    },
-                    success: function (result) {
-                        //alert(result);
-                        if (result && result === 'true')
-                            $(location).attr('href', '/home.html');
-                        else alert("用户名或密码错误!");
-                    },
-                    error: function () {
-                        alert("error!");
-                    }
-                });
-            });
-            $("#register-btn").click(function () {
-                $.ajax({
-                    type: "POST",
-                    dataType: "text",
-                    url: "/api/user/register",
-                    data: {
-                        username: $("#register-username").val(),
-                        password: $("#register-password").val()
-                    },
-                    success: function (result) {
-                        alert(result);
-                        if (result && result === 'true')
-                            alert("注册成功!");
-                        else alert("注册失败!");
-                    }
-                })
-            });
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <title>红太阳港口管理系统</title>
+    <meta name="keywords" content=""/>
+    <meta name="description" content=""/>
+    <link rel="stylesheet" href="/static/css/style.css"/>
+    <link rel="stylesheet" href="/static/css/modification.css"/>
 
-        })
-    </script>
-</head>
 <body>
-<div class="container" style="margin-top: 50px">
-    <form role="form">
-        <h2>登陆</h2>
-        <div class="form-group">
-            <label for="login-username">用户名</label>
-            <input type="text" class="form-control" id="login-username" name="username" autocomplete="off"
-                   placeholder="请输入名称">
+
+<div class="login-container">
+    <h1>红太阳港口管理系统</h1>
+
+    <div class="connect">
+        <a href="https://github.com/XiWinnie/HabourManagementSystem"> <img
+                src="/static/img/github_128px_1173875_easyicon.net.png"></a>
+    </div>
+
+    <form action="" method="post" id="loginForm">
+        <div class="typemodule">
+            <label>我是：</label>
+            <select class="type">
+                <option value="1" selected>操作员</option>
+                <option value="2">货主</option>
+                <option value="3">承运人</option>
+                <option value="4">管理员</option>
+            </select>
         </div>
-        <div class="form-group">
-            <label for="login-password">密码 </label>
-            <input type="password" class="form-control" id="login-password" name="password" autocomplete="off"
-                   placeholder="请输入密码">
+        <div>
+            <input type="number" name="username" class="username" placeholder="用户ID/邮箱" autocomplete="off"/>
         </div>
-        <button type="button" id="login-btn" class="btn btn-default">登陆</button>
+        <div>
+            <input type="password" name="password" class="password" placeholder="密码" oncontextmenu="return false"
+                   autocomplete="off" auonpaste="return false"/>
+        </div>
+        <!--<input type="submit" id="submit" name="submitbtn" class="submitbtn" value="登陆"/>-->
+        <button id="submit" type="submit" class= "submitbtn">登 录</button>
     </form>
-    <form role="form">
-        <h2>注册</h2>
-        <div class="form-group">
-            <label for="register-username">用户名</label>
-            <input type="text" class="form-control" id="register-username" name="username" autocomplete="off"
-                   placeholder="请输入名称">
-        </div>
-        <div class="form-group">
-            <label for="register-password"> 密码</label>
-            <input type="password" class="form-control" id="register-password" name="password" autocomplete="off"
-                   placeholder="请输入密码">
-        </div>
-        <div class="form-group">
-            <label for="register-confirm-password">重新密码</label>
-            <input type="password" class="form-control" id="register-confirm-password" name="confirm_password" autocomplete="off"
-                   placeholder="请输入密码">
-        </div>
-        <button type="button" id="register-btn" class="btn btn-default">注册</button>
-    </form>
-    <iframe src="//player.bilibili.com/player.html?aid=22500134&cid=37296070&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="height: 700px;width: 100%"> </iframe>
+
+    <a href="register.html">
+        <button type="button" class="register-tis">还没有账号？</button>
+    </a>
+
 </div>
+
+<script src="/static/js/jquery.min.js"></script>
+<script src="/static/js/common.js"></script>
+<!--背景图片自动更换-->
+<script src="/static/js/supersized.3.2.7.min.js"></script>
+<script src="/static/js/supersized-init.js"></script>
+<!--表单验证-->
+<script src="/static/js/jquery.validate.min.js?var1.14.0"></script>
+<script src="/static/js/jquery.cookie.js"></script>
+
 </body>
 </html>
