优化home.html页面 添加了shipper.html页面，但并没有实际内容

--- a/web/WEB-INF/home.html
+++ b/web/WEB-INF/home.html
@@ -77,7 +77,7 @@
 
             });
             $("#container-query-btn").click(function () {
-                $.ajax(getContainers);
+                $.ajax(getContainers());
             });
             $("#container-add-btn").click(function () {
                 insertContainer.data = {
