--- a/web/WEB-INF/index.html
+++ b/web/WEB-INF/index.html
@@ -22,11 +22,14 @@
         $(function () {
             var username = $.cookie('registeruser');
             var password = $.cookie('registerpassword');
+            var type = $.cookie('type');
             if (username && password) {
                 $(".username").val(username);
                 $(".password").val(password);
+                $(".type").val(type);
                 $.cookie('registeruser',null);
                 $.cookie('registerpassword',null);
+                $.cookie('type',null);
             }
 
 //            if (username && password) {
